Prep for 2021-10-19 class

--- a/docs/lectures/bib/psych260.bib
+++ b/docs/lectures/bib/psych260.bib
@@ -1,4 +1,23 @@
 
+@ARTICLE{Kennis2020-rw,
+  title    = "Prospective biomarkers of major depressive disorder: a systematic
+              review and meta-analysis",
+  author   = "Kennis, Mitzy and Gerritsen, Lotte and van Dalen, Marije and
+              Williams, Alishia and Cuijpers, Pim and Bockting, Claudi",
+  journal  = "Molecular psychiatry",
+  volume   =  25,
+  number   =  2,
+  pages    = "321--338",
+  month    =  feb,
+  year     =  2020,
+  url      = "http://dx.doi.org/10.1038/s41380-019-0585-z",
+  language = "en",
+  issn     = "1359-4184, 1476-5578",
+  pmid     = "31745238",
+  doi      = "10.1038/s41380-019-0585-z",
+  pmc      = "PMC6974432"
+}
+
 @ARTICLE{Miller2021-lb,
   title    = "Public acceptance of evolution in the United States, 1985-2020",
   author   = "Miller, Jon D and Scott, Eugenie C and Ackerman, Mark S and
