--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -194,7 +194,7 @@ title: "Schedule"
 - Assignments
     - Read W&B 12:361-371
 - Materials
-    - [Slides]()
+    - [Slides](lectures/260-2021-10-19-depression-bipolar.html). [PDF](lectures/260-2021-10-19-depression-bipolar.pdf)
     
 ### Thursday, October 21
 
