--- a/docs/lectures/bib/psych260.bib
+++ b/docs/lectures/bib/psych260.bib
@@ -1,4 +1,22 @@
 
+@ARTICLE{Pu2020-pb,
+  title    = "An integrated meta-analysis of peripheral blood metabolites and
+              biological functions in major depressive disorder",
+  author   = "Pu, Juncai and Liu, Yiyun and Zhang, Hanping and Tian, Lu and
+              Gui, Siwen and Yu, Yue and Chen, Xiang and Chen, Yue and Yang,
+              Lining and Ran, Yanqin and Zhong, Xiaogang and Xu, Shaohua and
+              Song, Xuemian and Liu, Lanxiang and Zheng, Peng and Wang, Haiyang
+              and Xie, Peng",
+  journal  = "Molecular psychiatry",
+  month    =  jan,
+  year     =  2020,
+  url      = "http://dx.doi.org/10.1038/s41380-020-0645-4",
+  language = "en",
+  issn     = "1359-4184, 1476-5578",
+  pmid     = "31959849",
+  doi      = "10.1038/s41380-020-0645-4"
+}
+
 @ARTICLE{Kennis2020-rw,
   title    = "Prospective biomarkers of major depressive disorder: a systematic
               review and meta-analysis",
