Draft of 2021-10-26 lecture, plus edits to notes on depression/bipolar disorder

--- a/docs/lectures/bib/psych260.bib
+++ b/docs/lectures/bib/psych260.bib
@@ -1,4 +1,120 @@
 
+@ARTICLE{Sidor2012-ki,
+  title     = "An update on antidepressant use in bipolar depression",
+  author    = "Sidor, Michelle M and MacQueen, Glenda M",
+  journal   = "Current psychiatry reports",
+  publisher = "Springer",
+  volume    =  14,
+  number    =  6,
+  pages     = "696--704",
+  month     =  dec,
+  year      =  2012,
+  url       = "http://dx.doi.org/10.1007/s11920-012-0323-6",
+  language  = "en",
+  issn      = "1523-3812, 1535-1645",
+  pmid      = "23065437",
+  doi       = "10.1007/s11920-012-0323-6"
+}
+
+@ARTICLE{Machado-Vieira2009-by,
+  title    = "The role of lithium in the treatment of bipolar disorder:
+              convergent evidence for neurotrophic effects as a unifying
+              hypothesis",
+  author   = "Machado-Vieira, Rodrigo and Manji, Husseini K and Zarate, Jr,
+              Carlos A",
+  journal  = "Bipolar disorders",
+  volume   = "11 Suppl 2",
+  pages    = "92--109",
+  month    =  jun,
+  year     =  2009,
+  url      = "http://dx.doi.org/10.1111/j.1399-5618.2009.00714.x",
+  language = "en",
+  issn     = "1398-5647, 1399-5618",
+  pmid     = "19538689",
+  doi      = "10.1111/j.1399-5618.2009.00714.x",
+  pmc      = "PMC2800957"
+}
+
+
+@ARTICLE{Merikangas2007-hu,
+  title    = "Lifetime and 12-month prevalence of bipolar spectrum disorder in
+              the National Comorbidity Survey replication",
+  author   = "Merikangas, Kathleen R and Akiskal, Hagop S and Angst, Jules and
+              Greenberg, Paul E and Hirschfeld, Robert M A and Petukhova, Maria
+              and Kessler, Ronald C",
+  journal  = "Archives of general psychiatry",
+  volume   =  64,
+  number   =  5,
+  pages    = "543--552",
+  month    =  may,
+  year     =  2007,
+  url      = "http://dx.doi.org/10.1001/archpsyc.64.5.543",
+  language = "en",
+  issn     = "0003-990X",
+  pmid     = "17485606",
+  doi      = "10.1001/archpsyc.64.5.543",
+  pmc      = "PMC1931566"
+}
+
+@ARTICLE{Cannon1929-ij,
+  title     = "Organization for physiological homeostasis",
+  author    = "Cannon, Walter B",
+  journal   = "Physiological reviews",
+  publisher = "American Physiological Society",
+  volume    =  9,
+  number    =  3,
+  pages     = "399--431",
+  month     =  jul,
+  year      =  1929,
+  url       = "https://doi.org/10.1152/physrev.1929.9.3.399",
+  issn      = "0031-9333",
+  doi       = "10.1152/physrev.1929.9.3.399"
+}
+
+@MISC{Sterling1988-di,
+  title     = "Handbook of Life Stress, Cognition and Health Edited by S.
+               Fisher and J. Reason Copyright 1988 John Wiley 8. Sons",
+  author    = "Sterling, Peter and Eyer, Joseph",
+  publisher = "retina.anatomy.upenn.edu",
+  year      =  1988,
+  url       = "https://retina.anatomy.upenn.edu/pdfiles/5446.pdf"
+}
+
+@ARTICLE{Ramsay2014-la,
+  title    = "Clarifying the roles of homeostasis and allostasis in
+              physiological regulation",
+  author   = "Ramsay, Douglas S and Woods, Stephen C",
+  journal  = "Psychological review",
+  volume   =  121,
+  number   =  2,
+  pages    = "225--247",
+  month    =  apr,
+  year     =  2014,
+  url      = "http://dx.doi.org/10.1037/a0035942",
+  language = "en",
+  issn     = "0033-295X, 1939-1471",
+  pmid     = "24730599",
+  doi      = "10.1037/a0035942",
+  pmc      = "PMC4166604"
+}
+
+@ARTICLE{Lachenmeier2015-mm,
+  title    = "Comparative risk assessment of alcohol, tobacco, cannabis and
+              other illicit drugs using the margin of exposure approach",
+  author   = "Lachenmeier, Dirk W and Rehm, J{\"u}rgen",
+  journal  = "Scientific reports",
+  volume   =  5,
+  pages    = "8126",
+  month    =  jan,
+  year     =  2015,
+  url      = "http://dx.doi.org/10.1038/srep08126",
+  language = "en",
+  issn     = "2045-2322",
+  pmid     = "25634572",
+  doi      = "10.1038/srep08126",
+  pmc      = "PMC4311234"
+}
+
 @ARTICLE{Pu2020-pb,
   title    = "An integrated meta-analysis of peripheral blood metabolites and
               biological functions in major depressive disorder",
