--- a/docs/lectures/260-2021-10-19-depression-bipolar.Rmd
+++ b/docs/lectures/260-2021-10-19-depression-bipolar.Rmd
@@ -421,7 +421,7 @@ knitr::include_graphics("https://www.pnas.org/content/pnas/113/42/11955.2/F2.lar
 
 ## Prevalence, subtypes
 
-- 1-3% prevalence, subthreshold affects another 2%
+- 1-3% lifetime prevalence, subthreshold affects another ~2% [[@Merikangas2007-hu]](Merikangas2007-hu)
 - Subtypes
     + **Bipolar I**: manic episodes, possible depressive ones
     + **Bipolar II**: no manic episodes but hypomania (disinhibition, irritability/agitation) + depression
@@ -476,6 +476,7 @@ knitr::include_graphics("https://www.pnas.org/content/pnas/113/42/11955.2/F2.lar
 
 ## Drug treatments
 
+- Anti-depressants not especially effective [[@Sidor2012-ki]](http://dx.doi.org/10.1007/s11920-012-0323-6)
 - Mood stabilizers
     + Lithium (Li)
     + Valproate (Depakote)
@@ -492,10 +493,14 @@ knitr::include_graphics("https://www.pnas.org/content/pnas/113/42/11955.2/F2.lar
 - [John Cade](https://en.wikipedia.org/wiki/John_Cade) discovered in 1948
 - Earliest effective medications for treating mental illness
 
-## Effects of Lithium
+## Effects of lithium
 
 - Reduces mania, minimal effects on depressive states
-- Preserves PFC, hip, amyg volume
+- Preserves PFC, hip, amyg volumes
+- Has other 'neuroprotective' effects [[@Machado-Vieira2009-by]](Machado-Vieira2009-by)
+
+## Effects of lithium
+
 - downregulates DA, glu; upregulates GABA
 - modulates 5-HT, NE
 - *levels can be tested/monitored via blood test*
@@ -509,9 +514,9 @@ knitr::include_graphics("https://www.pnas.org/content/pnas/113/42/11955.2/F2.lar
 
 ## Prospects
 
-- STEP-BD cohort (n=1469)
+- STEP-BD cohort ($n=1,469$)
     + 58% achieved recovery
-    + 49% had recurrences within 2 years
+    + 49% (of recovered) had recurrences within 2 years
     + Residual depressive symptoms can persist
 - [[@Geddes2013-hm]](http://doi.org/10.1016/S0140-6736(13)60857-0)
 
