--- a/docs/lectures/bib/psych260.bib
+++ b/docs/lectures/bib/psych260.bib
@@ -1,4 +1,43 @@
 
+@ARTICLE{Kwon2021-bj,
+  title    = "Failure of genetic therapies for Huntington's devastates
+              community",
+  author   = "Kwon, Diana",
+  journal  = "Nature",
+  volume   =  593,
+  number   =  7858,
+  pages    = "180",
+  month    =  may,
+  year     =  2021,
+  url      = "http://dx.doi.org/10.1038/d41586-021-01177-7",
+  keywords = "Drug discovery; Gene therapy; Neurodegeneration",
+  language = "en",
+  issn     = "0028-0836, 1476-4687",
+  pmid     = "33963316",
+  doi      = "10.1038/d41586-021-01177-7"
+}
+
+@ARTICLE{Garretti2019-sr,
+  title    = "Autoimmunity in Parkinson's Disease: The Role of
+              {$\alpha$-Synuclein-Specific} {T} Cells",
+  author   = "Garretti, Francesca and Agalliu, Dritan and Lindestam Arlehamn,
+              Cecilia S and Sette, Alessandro and Sulzer, David",
+  journal  = "Frontiers in immunology",
+  volume   =  10,
+  pages    = "303",
+  month    =  feb,
+  year     =  2019,
+  url      = "http://dx.doi.org/10.3389/fimmu.2019.00303",
+  keywords = "Parkinson's disease; T cells; adaptive immune system;
+              autoimmunity; blood-brain barrier; neuroinflammation;
+              $\alpha$-synuclein",
+  language = "en",
+  issn     = "1664-3224",
+  pmid     = "30858851",
+  doi      = "10.3389/fimmu.2019.00303",
+  pmc      = "PMC6397885"
+}
+
 @ARTICLE{Sidor2012-ki,
   title     = "An update on antidepressant use in bipolar depression",
   author    = "Sidor, Michelle M and MacQueen, Glenda M",
