--- a/docs/lectures/260-2021-11-09-action.Rmd
+++ b/docs/lectures/260-2021-11-09-action.Rmd
@@ -363,25 +363,26 @@ Ok, let's switch to talking about disorders of the motor system. We'll start wit
 
 ## Parkinson's
 
-- Slow, absent movement, resting tremor
-- Cognitive deficits, depression
-- DA Neurons in substantia nigra degenerate
+- Symptoms
+    - Slow, absent movement, resting tremor
+    - Cognitive deficits, depression
+- Biological correlates
+    - DA neurons in substantia nigra degenerate
+    - Autoimmune disorder? [[@Garretti2019-sr]](http://dx.doi.org/10.3389/fimmu.2019.00303)
+    
+## Parkinson's
+
 - Treatments
     + DA agonists
     + DA agonists linked to impulse control disorders in ~1/7 patients [[@ramirez-zamora_treatment_2016]](http://dx.doi.org/10.1586/14737175.2016.1158103)
     + Levodopa (L-Dopa), DA precursor
-    
-<div class="notes">
-The symptoms of Parkinson's include motor deficits and cognitive and affective symptoms. The disease is associated with degeneration in dopamine releasing neurons in the substantia nigra. Treatments include dopamine agonists, which have side effects, and Levodopa, a metabolic precursor for dopamine.
-</div>
+    - Deep brain stimulation
 
-<!-- ## Awakenings -->
+---
 
-<!-- <div class="centered"> -->
-<!-- <a src="https://en.wikipedia.org/wiki/Awakenings"> -->
-<!-- <img src="https://upload.wikimedia.org/wikipedia/en/2/2b/Awakenings.jpg" height=500px> -->
-<!-- </a> -->
-<!-- </div> -->
+```{r, fig.cap="https://mayfieldclinic.com/pe-dbs.htm"}
+knitr::include_graphics("https://dbmmu5j6lxew.cloudfront.net/pe-dbs_fig1.jpg")
+```
 
 ## Huntington's
 
@@ -399,18 +400,20 @@ The second disorder of movement we'll discuss is Huntington's. The folk singer W
 - Formerly Huntington’s Chorea
     + "Chorea" from Greek for "dance"
     + “Dance-like” pattern of involuntary movements
-- Cognitive decline
-- Genetic + environmental influences
-- Disturbance in striatum
-- No effective treatment
-
-<div class="notes">
-This disease used to be called Huntington's Chorea because of the dance-like pattern of involuntary movements that were a symptom. Like Parkinson's it has cognitive symptoms and is associated with neurodegeneration in the basal ganglia.  It is a genetic condition that can be detected, but for which there is no effective treatment or cure. Let's watch a video about Huntington's.
-</div>
+    - Cognitive decline
 
 ## Huntington's
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/HBLrY_nXU_U" frameborder="0" allowfullscreen></iframe>
+
+## Huntington's
+
+- Genetic + environmental influences
+    - Gene fragment (CAG) duplication
+    - High levels of *huntingtin* protein accumulate in basal ganglia
+    - People with familial risk may want to consider genetic testing
+- No effective treatment
+    - Promising gene therapy trial halted this spring [[@Kwon2021-bj]](http://dx.doi.org/10.1038/d41586-021-01177-7)
 
 ## Final thoughts
 
