--- a/lectures/260-2021-11-11-vision.Rmd
+++ b/lectures/260-2021-11-11-vision.Rmd
@@ -375,4 +375,143 @@ knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/5/55/Cir
 <img src="img/lgn.jpg" height=400px>
 </div>
 
+## LGN
+
+- 6 layers + intralaminar zone
+    + Parvocellular (small cells): chromatic 
+    + Magnocellular (big cells): achromatic
+    + Koniocellular (chromatic - short wavelength?)
+- Retinotopic map of opposite visual field
+
+## From LGN to V1
+
+<div class="centered">
+<img src="img/eye-to-brain.jpg" height=450px>
+</div>
+
+## From LGN to V1
+
+- Via optic radiations
+- *[Primary visual cortex (V1)](http://www.scholarpedia.org/article/Area_V1)* in occipital lobe
+
+## Human V1 {.smaller}
+
+<div class="centered">
+<img src="http://www.scholarpedia.org/w/images/3/3a/03-Human-V1.png" height=450px>
+
+<http://www.scholarpedia.org/w/images/3/3a/03-Human-V1.png>
+</div>
+
+## Measuring retinotopy in V1 {.smaller}
+
+<div class="centered">
+<img src="img/mri-v1-retinotopy.jpg" height=450px>
+
+[[@dougherty_visual_2003]](http://dx.doi.org/10.1167/3.10.1)
+</div>
+
+---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/f2JMbo4BZqY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rsykP-9-moA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+## Retinotopy in V1
+
+- Fovea overrepresented
+    + Analogous to somatosensation
+    + High acuity in fovea vs. lower outside it
+- Upper visual field/lower (ventral) V1 and *vice versa*
+
+## Recording from V1
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IOHayh06LJ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8VdFf3egwfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+## V1 has laminar, columnar organization
+
+<div class="centered">
+<img src="img/cortical-hypercolumn.jpg" height=450px>
+</div>
+
+## V1 has laminar, columnar organization
+
+- 6 laminae (layers)
+    + Input: Layer 4
+    + Output: Layers 2-3 (to cortex), 5 (to brainstem), 6 (to LGN)
+
+## V1 has laminar, columnar organization
+
+- Columns
+    + Orientation/angle
+    + Spatial frequency
+    
+## Orientation/angle tuning {.smaller}
+
+<div class="centered">
+<img src="img/dir.selective.png" height=450px>
+
+<https://foundationsofvision.stanford.edu/wp-content/uploads/2012/02/dir.selective.png>
+</div>
+
+## From center-surround receptive fields to line detection {.smaller}
+
+<div class="centered" height=450px>
+<img src="http://www.scholarpedia.org/w/images/9/99/11-Hubel-Wiesel-model.png" height=450px>
+</div>
+
+## Spatial frequency tuning {.smaller}
+
+<div class="centered">
+Low == gist    ||     high == details
+<img src="img/spatial-freq-fpsyg-03-00620-g003.jpg" width=850px>
+
+[[@panichello_predictive_2013]](http://dx.doi.org/10.3389/fpsyg.2012.00620)
+</div>
+
+## V1 has laminar, columnar organization
+
+- Columns
+    + Color/wavelength
+    + Eye of origin, *ocular dominance*
+    
+## Ocular dominance columns
+
+<div class="centered">
+<img src="img/cortical-hypercolumn.jpg" height=450px>
+</div>
+
+## Ocular dominance signals retinal disparity
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/KjAQdc29vF8" frameborder="0" allowfullscreen></iframe>
+
+<http://www.scholarpedia.org/w/images/9/99/11-Hubel-Wiesel-model.png>
+</div>
+
+## Beyond V1
+
+<div class="centered" height=450px>
+<img src="img/beyond-v1.jpg" height=450px>
+</div>
+
+## Beyond V1
+
+- Larger, more complex receptive fields
+- *Dorsal stream* (where/how)
+    + Toward parietal lobe
+- *Ventral stream* (what)
+
+## What is vision for?
+
+- What is it? (form perception)
+- Where is it? (space perception)
+- How do I get from here to there (action control)
+- What time (or time of year) is it?
+
 ## References {.smaller}
+
