--- a/lectures/bib/psych260.bib
+++ b/lectures/bib/psych260.bib
@@ -1,4 +1,22 @@
 
+@ARTICLE{Dickerson2010-qh,
+  title    = "The episodic memory system: neurocircuitry and disorders",
+  author   = "Dickerson, Bradford C and Eichenbaum, Howard",
+  journal  = "Neuropsychopharmacology: official publication of the American
+              College of Neuropsychopharmacology",
+  volume   =  35,
+  number   =  1,
+  pages    = "86--104",
+  month    =  jan,
+  year     =  2010,
+  url      = "http://dx.doi.org/10.1038/npp.2009.126",
+  language = "en",
+  issn     = "0893-133X, 1740-634X",
+  pmid     = "19776728",
+  doi      = "10.1038/npp.2009.126",
+  pmc      = "PMC2882963"
+}
+
 @ARTICLE{Kwon2021-bj,
   title    = "Failure of genetic therapies for Huntington's devastates
               community",
