--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -327,6 +327,8 @@ title: "Schedule"
 - Topics
     - **Quiz 4**.
     - Speed of nervous system conduction lab
+- Materials
+    - [Slides](lectures/260-2021-12-07-speed-lab.html). [PDF](260-2021-12-07-speed-lab.pdf).
 
 ### Thursday, December 9
 
